# palette

./: README.md  generate_css.py  palette.toml  pyproject.toml
src/yeginbay_palette/: __init__.py  mystyle.mplstyle  palette.toml
