[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yeginbay-palette"
version = "0.1.0"
description = "Personal color palette and matplotlib style."
authors = [{ name = "Alisher Yeginbay" }]
requires-python = ">=3.11"
dependencies = ["matplotlib", "cycler"]

[tool.hatch.build.targets.wheel]
packages = ["src/yeginbay_palette"]

[tool.hatch.build.targets.wheel.force-include]
"src/yeginbay_palette/palette.toml" = "yeginbay_palette/palette.toml"
"src/yeginbay_palette/mystyle.mplstyle" = "yeginbay_palette/mystyle.mplstyle"
